--- a/appsettings.json
+++ b/appsettings.json
@@ -12,8 +12,7 @@
     }
   },
   "MongoConfig": {
-    // "ConnectionString": "mongodb://localhost:27017",
-    "Database": "test",
-    "Collection": "test"
+    "Database": "sample_airbnb",
+    "Collection": "listingsAndReviews"
   }
 }
